--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.nav {
+    padding-bottom: 15px;
+}
 #createForm, #updateForm, #deleteForm {
     display: none;
 }
@@ -12,7 +15,4 @@
     padding-left: 10px;
     padding-right: 10px;
     font-weight: bolder;
-}
-#updateForm #submit {
-    background-color: red;
 }
